@startuml
'https://plantuml.com/class-diagram
class FireBaseFirestore
{
    +CollectionReference collection(String)
}
class Ingredient
{
    -String description
    -Date bestBeforeDate
    -String location
    -int count
    -String unit
    -String category

    -String formattedBestBeforeDate()
}

package ShoppingList #DDD
{
    class ShoppingItem extends Ingredient
    {
        -boolean Checked = false
        -int oldcount
    }
    package ShoppingListFragment #DFF
    {
        interface ShoppingListFragment.OnFragmentInteractionListener
        {
            +void onOkPressedEdit(ShoppingItem newItem)
        }
        class ShoppingItemFragment
        {
            -EditText itemDescription
            -EditText itemCount
            -EditText itemUnit
            -EditText itemLocation
            -TextView itemBestBeforeDate
            -Date calendarDate
            -EditText itemCategory
            -OnFragmentInteractionListener listener
            -FirebaseFirestore db
            -ActivityResultLauncher<Intent> calendarActivity

            -void setDate(String date)
            -int parseCount(String count)
            +void onAttach(@NonNull Context context)
            +{static}void editShoppingItemDB(String oldItem, Ingredient newItem, CollectionReference IngredientCollection)
            +{static} ShoppingItemFragment newInstance(ShoppingItem item)
            +Dialog onCreateDialog(@Nullable Bundle savedInstanceState)
            +boolean emptyStringCheck(String description, String location, String count, String unit, String category)

        }
    }
    package ShoppingListActivity #DFF
    {
        class CustomShoppingItemArrayAdapter
        {
            -ArrayList<ShoppingItem> items
            -Context context
            -FirebaseFirestore db

            +CustomShoppingItemArrayAdapter(Context context, ArrayList<ShoppingItem> items)
            +View getView(int position, @Nullable View convertView, @NonNull ViewGroup parent)
        }
        class ShoppingListActivity implements ShoppingListFragment.OnFragmentInteractionListener
        {
                -ListView shoppingList
                -ArrayAdapter<ShoppingItem> shoppingAdapter
                -ArrayList<ShoppingItem> dataList
                -ArrayList<ShoppingItem> tempList
                -int selected
                -FirebaseFirestore db
                -String[] sortValues = { "description", "category" }

                *void onCreate(Bundle savedInstanceState)
                +void onOkPressedEdit(ShoppingItem item)
                +void additem(ShoppingItem item)
                +void additemCheck(ShoppingItem item)
        }
    }
    ShoppingListActivity o-- "1" CustomShoppingItemArrayAdapter
    ShoppingItemFragment <--> ShoppingListActivity

    ShoppingItemFragment *--> ShoppingListFragment.OnFragmentInteractionListener
    ShoppingItem "0..*" -o ShoppingItemFragment
    ShoppingItem "0..*" -o ShoppingListActivity

    FireBaseFirestore --o ShoppingListActivity
    FireBaseFirestore --o ShoppingItemFragment
    FireBaseFirestore --o CustomShoppingItemArrayAdapter
}
@enduml